--- a/styleme.css
+++ b/styleme.css
@@ -11,7 +11,7 @@ span{
     color: yellowgreen;
 
 }
-#editImageSize{
+.editImageSize{
     width: 400px;
     height: 300px;
     border-radius: 5px;
