--- a/styleme.css
+++ b/styleme.css
@@ -31,7 +31,7 @@ p::first-letter{
     color:rgb(87, 3, 3);
 }
 
-#movieDiv ol li ol{
+#movieDiv ul li{
     list-style: none ;
 }
 #movieDivReverse ol{
