--- a/recipe.css
+++ b/recipe.css
@@ -18,11 +18,11 @@ h1,h2{
 }
 h1{
     text-align: center;
-    font-weight: 22pt;
+    font-size: 22pt;
 }
 h2{
     text-align: left;
-    font-weight: 18pt;
+    font-size: 18pt;
 }
 a{
     color: #A4A400;
