--- a/styles/movie.css
+++ b/styles/movie.css
@@ -1,9 +1,9 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url(Images/background.png);
+    background-image: url(../Images/background.png);
 }
 header{
-    background-image: url(Images/bannerbg.png);
+    background-image: url(../Images/bannerbg.png);
     background-repeat: repeat-x;
 }
 .bannerImage{
@@ -27,7 +27,7 @@ h1{
 
 
 .mainWindow{    
-    background-image: url(Images/background.png);
+    background-image: url(../Images/background.png);
     float:left;
     width: 80%;
     position: relative;
@@ -45,7 +45,7 @@ h1{
     font-size: 70px;
     font-weight: bold;
     color: red;
-    background-image: url(Images/rbg.png);
+    background-image: url(../Images/rbg.png);
     background-repeat: repeat-x;
     overflow: auto;
     margin: -10px 0;
